--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="../styles/lateral.css">
     <link rel="stylesheet" href="../styles/tablas.css">
     <link rel="stylesheet" href="../styles/formularios.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/alerts.js"></script>
 </head>
 <body>
     <aside>
@@ -26,7 +28,7 @@
             <span class="material-symbols-outlined">
                 checklist
                 </span>
-            <span class="tooltip">tabla ordenes</span>
+            <span class="tooltip">ordenes</span>
             </a></li>
              
             <li><a href="productos.html" class="lateral admin selected">
@@ -137,7 +139,7 @@
         let filteredProductos = []; // Nueva variable para los productos filtrados
     
         function fetchProductos() {
-    fetch('https://latosca.up.railway.app/productos')
+    fetch('http://localhost:5000/productos')
         .then(response => response.json())
         .then(productos => {
             // Filtrar productos para asegurar que solo los que tienen estatus = 1 sean procesados
