--- a/integradora/resourses/zonas.html
+++ b/integradora/resourses/zonas.html
@@ -107,7 +107,7 @@ let zonasData = []; // Arreglo para almacenar los datos de zonas
 let filteredZonas = []; // Arreglo para almacenar los resultados filtrados
 
 function fetchZonas() {
-    fetch('http://localhost:5000/zonas')
+    fetch('https://latosca.up.railway.app/zonas')
         .then(response => response.json())
         .then(zonas => {
             zonasData = zonas; // Guardamos los datos en una variable global
