--- a/integradora/resourses/direcciones.html
+++ b/integradora/resourses/direcciones.html
@@ -102,7 +102,7 @@ let zonasData = []; // Almacena las zonas cargadas
 
 function cargarZonas() {
   return new Promise((resolve, reject) => {
-    fetch("http://localhost:5000/zonas")
+    fetch("https://latosca.up.railway.app/zonas")
       .then((response) => {
         if (!response.ok) {
           throw new Error(`Error en la respuesta del servidor: ${response.status}`);
@@ -137,7 +137,7 @@ document.addEventListener("DOMContentLoaded", function() {
     document.getElementById('Ndirecciones').innerText += " " + nombreC;
 
     if (clienteId) {
-        fetch('http://localhost:5000/direcciones')
+        fetch('https://latosca.up.railway.app/direcciones')
             .then(response => response.json())
             .then(direcciones => {
                 direccionesData = direcciones.filter(direccion => direccion.ID_cliente == clienteId);
