--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -181,7 +181,7 @@ let usuarioNombre = null; // Almacena el nombre del usuario
 // Función para cargar el ID del usuario autenticado
 async function cargarUsuarioId() {
     try {
-        const response = await fetch("http://localhost:5000/api/usuario/id", { credentials: "include" });
+        const response = await fetch("https://latosca.up.railway.app/api/usuario/id", { credentials: "include" });
         if (!response.ok) throw new Error("No se pudo obtener el ID del usuario. Verifica si estás autenticado.");
 
         const data = await response.json();
@@ -196,7 +196,7 @@ async function cargarUsuarioId() {
 // Función para cargar el nombre del empleado dado un ID
 async function cargarEmpleadoNombre(empleadoId) {
     try {
-        const response = await fetch("http://localhost:5000/empleados");
+        const response = await fetch("https://latosca.up.railway.app/empleados");
         const empleados = await response.json();
 
         const empleado = empleados.find((e) => e.ID_Empleados == empleadoId && e.estatus == 1);
@@ -276,7 +276,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         console.log(`Usuario cargado: ${usuarioNombre}`); // Confirmar que el usuario se cargó
 
         // Configurar permisos basados en el rol del usuario
-        const response = await fetch("http://localhost:5000/api/rol", { credentials: "include" });
+        const response = await fetch("https://latosca.up.railway.app/api/rol", { credentials: "include" });
         const data = await response.json();
 
         if (data.rol === "admin") {
@@ -363,7 +363,7 @@ document.addEventListener("DOMContentLoaded", async () => {
         
         // Función principal para cargar y procesar las órdenes
 function fetchAndRenderOrdenes() {
-    fetch("http://localhost:5000/ViewOrden")
+    fetch("https://latosca.up.railway.app/ViewOrden")
         .then((response) => response.json())
         .then((ordenes) => {
             const fechaInicio = getSelectedDate();
@@ -389,7 +389,7 @@ function fetchAndRenderOrdenes() {
                 return;
             }
         
-            const url = `http://localhost:5000/orden/estatus/${id}`;
+            const url = `https://latosca.up.railway.app/orden/estatus/${id}`;
             const opciones = {
                 method: "PUT",
                 headers: {
