--- a/integradora/index.html
+++ b/integradora/index.html
@@ -11,6 +11,7 @@
     <script src="js/alerts.js"></script>
 </head>
 <body id="log">
+    <main style="width: 100%;">
     <form id="login">
         <h2 class="fuente">Iniciar sesión</h2>
         <input id="correo" class="sesion" type="text" placeholder="Usuario">
@@ -18,7 +19,7 @@
         <button type="button" onclick="iniciarSesion()" class="boton">Iniciar sesión</button>
 <!--         <a href="resourses/recuperacion.html">haz olvidado tu contraseña?</a> -->
     </form>
-    
+    </main>
     
     <!-- Luego carga session.js, que usa las alertas definidas en alerts.js -->
     <script src="js/session.js"></script>
