--- a/integradora/resourses/cambio.html
+++ b/integradora/resourses/cambio.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recuperacion de Contraseña</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../styles/login.css">
     <link rel="stylesheet" href="../styles/loader.css">
+    <link rel="stylesheet" href="../styles/lateral.css">
     <script src="../js/loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/alerts.js"></script>
@@ -18,6 +20,17 @@
             <img src="../img/logo-tosca-grad.png" alt="Logo">
         </div>
     </div>
+    <aside>
+        <nav>
+        <ul>
+            <li><a href="main.html" class="lateral">
+                <span class="material-symbols-outlined">arrow_back</span>
+                <span class="tooltip">volver</span>
+                </a></li>
+        </ul>
+        </nav>
+    </aside>
+    <main>
     <form id="login">
         <h2 class="fuente">actualiza Contraseña</h2>
         <input class="sesion" type="password" id="antigua" placeholder="Contraseña antigua">
@@ -26,6 +39,7 @@
 
         <button onclick="recuperacion()" class="boton">Actualizar</button>
     </form>
+</main>
     <script src="../js/session.js"></script>
     <script>
         /* --------------------- Variables Globales --------------------- */
