--- a/integradora/resourses/detalles.html
+++ b/integradora/resourses/detalles.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle Orden</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    
     <link rel="stylesheet" href="../styles/lateral.css">
     <link rel="stylesheet" href="../styles/formularios.css">
     <link rel="stylesheet" href="../styles/tablas.css">
@@ -15,6 +15,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- Primero carga alerts.js, que define las alertas -->
     <script src="../js/alerts.js"></script>
     <script src="../js/loader.js"></script>
@@ -65,7 +66,7 @@
                         <select id="direccion" class="selects js-example-basic-single" name="direccion" disabled>
                             <option value="" selected disabled>Dirección</option>
                         </select>
-                        <input type="number" id="totalZ">
+                        <input type="number" id="totalZ" readonly>
                     </div>
                 </section>
                 <!-- Tipo de Pago, Fecha, Estatus -->
