--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -228,11 +228,7 @@ async function inicializarUsuario() {
 function filterAndSortOrdenes(ordenes, fechaInicio) {
     const startDate = new Date(fechaInicio); // Fecha de inicio
     const userName = usuarioNombre ? usuarioNombre.trim().toLowerCase() : ""; // Usar el nombre global
-
-    if (!userName) {
-        console.error("No se pudo obtener el nombre del usuario.");
-        return [];
-    }
+    
 
     console.log(`Filtrando órdenes para el usuario: ${userName}`);
 
@@ -274,7 +270,8 @@ document.addEventListener("DOMContentLoaded", async () => {
         }
 
         console.log(`Usuario cargado: ${usuarioNombre}`); // Confirmar que el usuario se cargó
-
+        const nombre_user = document.getElementById('nombre_user');
+        nombre_user.innerText(usuarioNombre)
         // Configurar permisos basados en el rol del usuario
         const response = await fetch("https://latosca.up.railway.app/api/rol", { credentials: "include" });
         const data = await response.json();
