--- a/integradora/resourses/detalles.html
+++ b/integradora/resourses/detalles.html
@@ -39,11 +39,11 @@
     </aside>
     <main>
         <div id="DetalleO">
-            
-            <form id="detalles" class="mod">
-                <h2>Orden</h2><button id="editarOr" onclick="editarOr()"  class="admin bot" style="float: right;"><span class="material-symbols-outlined">
+            <button id="editarOr" onclick="editarOr()"  class="admin bot" style="float: right;"><span class="material-symbols-outlined">
                     edit
                     </span></button>
+            <form id="detalles" class="mod">
+                <h2>Orden</h2>
                 <!-- Empleado -->
                 <section id="general" class="full sec">
                     <h3 class="full">Datos Generales</h3>
