--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -112,7 +112,7 @@
             </select>
             <div class="tercio">
                 <select class="js-example-basic-single" name="Categoria">
-                    <option value="" disabled>Seleccione una categoría</option> <!-- Opciones dinámicas -->
+                    <option value="" disabled>Categoría</option> <!-- Opciones dinámicas -->
                 </select>
             </div>
             <input
