--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -220,7 +220,7 @@ async function inicializarUsuario() {
             // Actualizar el nombre del usuario en el HTML
             const nombreUserElement = document.getElementById("nombre_user");
             if (nombreUserElement) {
-                nombreUserElement.innerText = `Bienvenido, ${usuarioNombre}`;
+                nombreUserElement.innerText = `${usuarioNombre}`;
             }
 
         } else {
