--- a/integradora/resourses/main.html
+++ b/integradora/resourses/main.html
@@ -137,7 +137,7 @@
             </div>
             <div class="card">
                 <div class="icon-container">
-                    <span class="material-icons icon">pending</span>
+                    <span class="material-icons icon">start</span>
                 </div>
                 <div class="content">
                     <p>Órdenes activas</p>
