--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -104,7 +104,7 @@
               X
             </button>
     
-            <input type="text" class="full" name="Nombre" placeholder="Nombre" required/>
+            <input type="text" maxlength="50" class="full" name="Nombre" placeholder="Nombre" required/>
             <select class="tercio" name="tipo" required>
               <option value="" selected disabled>Tipo</option>
               <option value="suelto">Kilogramos</option>
