--- a/integradora/resourses/clientes.html
+++ b/integradora/resourses/clientes.html
@@ -199,11 +199,11 @@ fetchClientes();
         <form action="" id="clienteForm" class="modificacion">
             <h2>Añadir Cliente</h2>
             <button id="salirP" type="button" onclick="colapsePopup('addPopup')">X</button>
-            <input type="text" class="tercio" name="NombreC" placeholder="Nombre(s)">
-            <input type="text" class="tercio" name="PaternoC" placeholder="Apellido Paterno">
-            <input type="text" class="tercio" name="MaternoC" placeholder="Apellido Materno">
-            <input type="text" class="medio" name="telefonoC" placeholder="teléfono" required>
-            <input type="text" class="medio" name="correoC" placeholder="correo">
+            <input type="text" maxlength="50" class="tercio" name="NombreC" placeholder="Nombre(s)">
+            <input type="text" maxlength="50" class="tercio" name="PaternoC" placeholder="Apellido Paterno">
+            <input type="text" maxlength="50" class="tercio" name="MaternoC" placeholder="Apellido Materno">
+            <input type="text" maxlength="10" class="medio" name="telefonoC" placeholder="teléfono" required>
+            <input type="text" maxlength="100" class="medio" name="correoC" placeholder="correo">
             <div id="contDicc"></div>
             <button type="button" class="full" id="B_direcciones" onclick="agregarDireccion()">Añadir dirección</button>
             <ul class="error full" id="errorC"></ul>
