--- a/integradora/resourses/zonas.html
+++ b/integradora/resourses/zonas.html
@@ -192,8 +192,7 @@ fetchZonas();
         <form action="" class="modificacion" id="zonaForm">
             <h2>Añadir Zona</h2>
             <button id="salirP" type="button" onclick="colapsePopup('addPopup')">X</button>
-            <input
-                type="text"
+            <input type="text" maxlength="50"
                 class="medio"
                 name="NombreZ"
                 placeholder="Nombre zona"
