--- a/integradora/resourses/empleados.html
+++ b/integradora/resourses/empleados.html
@@ -194,7 +194,7 @@
 
     <div id="addPopup" class="Popup">
         <button id="salirP" type="button" onclick="colapsePopup('addPopup')">X</button>
-        <form action="" class="modificacion" id="empleadoForm" onsubmit="">
+        <form action="" class="modificacion" id="empleadoForm">
             <h2>Añadir Empleado</h2>
             
             <input type="text" maxlength="50" class="tercio" name="Nombres" placeholder="Nombre(s)">
