--- a/integradora/resourses/productos.html
+++ b/integradora/resourses/productos.html
@@ -116,7 +116,7 @@
                 </select>
             </div>
             <input
-              type="number"
+              type="text"
               class="tercio"
               name="precio"
               placeholder="Precio"
