--- a/integradora/index.html
+++ b/integradora/index.html
@@ -14,7 +14,7 @@
     <main style="width: 100%;">
     <form id="login">
         <h2 class="fuente">Iniciar sesión</h2>
-        <input id="correo" class="sesion" type="text" placeholder="Usuario">
+        <input id="correo" class="sesion" type="text" placeholder="Correo">
         <input id="password" class="sesion" type="password" placeholder="Contraseña">
         <button type="button" onclick="iniciarSesion()" class="boton">Iniciar sesión</button>
 <!--         <a href="resourses/recuperacion.html">haz olvidado tu contraseña?</a> -->
