--- a/integradora/resourses/empleados.html
+++ b/integradora/resourses/empleados.html
@@ -205,7 +205,7 @@
                 <option value="empleado">Empleado</option>
                 <option value="admin">Admin</option>
             </select>
-            <input type="text" maxlength="10" class="medio" name="telefono" placeholder="Teléfono">
+            <input type="number" maxlength="10" class="medio" name="telefono" placeholder="Teléfono">
             <input type="email"maxlength="100" class="full" name="correo" placeholder="Correo">
             <input type="submit" class="full" value="Enviar">
         </form>
