--- a/integradora/resourses/clientes.html
+++ b/integradora/resourses/clientes.html
@@ -133,7 +133,7 @@ function cargarClientes() {
                 <td id="ApellidoP${client.ID_cliente}">${client.Apellido_P}</td>
                 <td id="ApellidoM${client.ID_cliente}">${client.Apellido_M}</td>
                 <td id="telefono${client.ID_cliente}">${client.Telefono}</td>
-                <td><a href="direcciones.html?id=${client.ID_cliente}&nombres=${client.Nombres} ${client.Apellido_P}"><button id="ver_direccion" class="ver">ver</button></a></td>
+                <td><a href="direcciones.html?id=${client.ID_cliente}&nombres=${client.Nombres} ${client.Apellido_P}"><button id="ver_direccion" class="ver">Ver</button></a></td>
                 <td id="correo${client.ID_cliente}">${client.correo}</td>
                 <td class="acciones">
                     <button class="B_editar" onclick="updateCliente(${client.ID_cliente})"><span class="material-symbols-outlined">edit</span></button>
